--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>你的名字｜个人网站</title>
+  <title>hakatory｜个人网站</title>
   <meta name="description" content="你的名字的个人网站：作品集、技能、联系方式。" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -14,8 +14,8 @@
       <div class="avatar" aria-hidden="true">🙂</div>
 
       <div class="heroText">
-        <h1 class="name">你的名字</h1>
-        <p class="tagline">一句话介绍：比如「前端入门中｜正在做作品集」</p>
+        <h1 class="name">hakatory</h1>
+        <p class="tagline">前端入门</p>
 
         <div class="btnRow">
           <button id="copyEmailBtn" class="btn primary" type="button" data-email="yourname@example.com">
@@ -73,8 +73,8 @@
     <section class="card about">
       <h2>关于我</h2>
       <p>
-        这里写三句话就够：你在学什么、想做什么、能提供什么价值。<br />
-        例：我在系统学习前端，正在做作品集；喜欢把页面做得干净好用；可接简单落地页/修改维护。
+        你在学什么、想做什么、能提供什么价值。<br />
+        我在系统学习前端，正在做作品集；喜欢把页面做得干净好用；可接简单落地页/修改维护。
       </p>
 
       <div class="twoCol">
@@ -89,8 +89,8 @@
         <div>
           <h3>联系方式</h3>
           <ul class="list">
-            <li>邮箱：<span class="mono">yourname@example.com</span></li>
-            <li>微信：<span class="mono">your_wechat</span></li>
+            <li>邮箱：<span class="mono">dcan17921@gmail.com</span></li>
+            <li>微信：<span class="mono">can7941</span></li>
             <li>地区：<span class="mono">Singapore / 远程</span></li>
           </ul>
         </div>
@@ -98,7 +98,7 @@
     </section>
 
     <footer class="footer">
-      <span>© <span id="year"></span> 你的名字</span>
+      <span>© <span id="year"></span> hakatory</span>
       <span class="sep">·</span>
       <a href="https://github.com/yourname" target="_blank" rel="noreferrer">GitHub</a>
     </footer>
