--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <p class="tiny">
-          也可以把第二个按钮改成：B站主页 / 简历链接 / 作品集合集
+          b站id：北桥寻风
         </p>
       </div>
     </header>
@@ -47,7 +47,7 @@
 
       <article class="card proj">
         <h2>项目二：待补充</h2>
-        <p>建议放一个「可看见结果」的项目，比如 ToDo / 计时器 / 小组件。</p>
+        <p>coc高手</p>
         <div class="meta">
           <span class="pill">练习</span><span class="pill">可视化</span>
         </div>
@@ -59,7 +59,7 @@
 
       <article class="card proj">
         <h2>项目三：待补充</h2>
-        <p>建议放「接单向」内容：落地页、店铺海报合集、网页切图等。</p>
+        <p>接单向位</p>
         <div class="meta">
           <span class="pill">作品集</span><span class="pill">接单</span>
         </div>
@@ -74,7 +74,7 @@
       <h2>关于我</h2>
       <p>
         你在学什么、想做什么、能提供什么价值。<br />
-        我在系统学习前端，正在做作品集；喜欢把页面做得干净好用；可接简单落地页/修改维护。
+        我在系统学习前端，正在做作品集；喜欢把页面做得干净好用；可接简单落地页/修改维护。高速节点开源
       </p>
 
       <div class="twoCol">
