--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <p class="tagline">前端入门</p>
 
         <div class="btnRow">
-          <button id="copyEmailBtn" class="btn primary" type="button" data-email="yourname@example.com">
+          <button id="copyEmailBtn" class="btn primary" type="button" data-email="dcan17921@gmail.com">
             复制邮箱
           </button>
-          <a class="btn" href="https://github.com/yourname" target="_blank" rel="noreferrer">
+          <a class="btn" href="https://github.com/hakatory" target="_blank" rel="noreferrer">
             打开 GitHub
           </a>
         </div>
@@ -73,7 +73,7 @@
     <section class="card about">
       <h2>关于我</h2>
       <p>
-        你在学什么、想做什么、能提供什么价值。<br />
+        <br />
         我在系统学习前端，正在做作品集；喜欢把页面做得干净好用；可接简单落地页/修改维护。高速节点开源
       </p>
 
